<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="?attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/recycler_row_cover_art"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/recycler_row_cover_art_desc"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/search_recycler_image_curved" />

    <TextView
        android:id="@+id/recycler_row_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="156dp"
        android:fontFamily="@font/biko_regular"
        android:text="@string/recycler_row_song_name"
        android:textColor="@color/maroon"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/recycler_row_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/biko_regular"
        android:text="@string/recycler_row_artist_name"
        android:textColor="@color/maroonPale"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/recycler_row_song"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recycler_row_song"
        app:layout_constraintTop_toBottomOf="@+id/recycler_row_song" />

</androidx.constraintlayout.widget.ConstraintLayout>