<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    app:layoutDescription="@xml/fragment_player_scene">

    <ImageView
        android:id="@+id/bgGradient"
        android:layout_width="match_parent"
        android:layout_height="850dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_gradient" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/coverArtHolder"
        android:layout_width="345dp"
        android:layout_height="345dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/recycler_row_cover_art_desc"
        android:elevation="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover_art_placeholder" />

    <TextView
        android:id="@+id/songHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ellipsize="end"
        android:fontFamily="@font/biko_bold"
        android:maxLines="1"
        android:text="@string/recycler_row_song_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverArtHolder" />

    <TextView
        android:id="@+id/artistHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/biko_regular"
        android:text="@string/recycler_row_artist_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/songHolder"
        app:layout_constraintStart_toStartOf="@+id/songHolder"
        app:layout_constraintTop_toBottomOf="@+id/songHolder" />

    <ImageView
        android:id="@+id/btnPlaylistOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/svg_btn_add_to_playlist"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/svg_heart_unselected" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:progressBackgroundTint="@color/lightGrey"
        android:progressTint="@color/pinkDefault"
        android:thumbTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artistHolder" />

    <TextView
        android:id="@+id/etl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/biko_regular"
        android:text="@string/defaultTimeLabel"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/rtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/biko_regular"
        android:text="@string/defaultTimeLabel"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/btnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/previous_song"
        android:elevation="5dp"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        app:srcCompat="@drawable/svg_btn_prev" />

    <ImageView
        android:id="@+id/btnPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/play_button_desc"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:srcCompat="@drawable/btn_play_pause" />

    <ImageView
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/next_song"
        android:elevation="5dp"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlayPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlayPause"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        app:srcCompat="@drawable/svg_btn_next" />

    <ImageView
        android:id="@+id/btnLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/loop_icon_desc"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/btnPlayPause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlayPause"
        app:layout_constraintTop_toTopOf="@id/btnPlayPause"
        app:srcCompat="@drawable/svg_btn_loop_unselected" />

    <ImageView
        android:id="@+id/btnShuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/white"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/btnPlayPause"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnPrevious"
        app:layout_constraintTop_toTopOf="@id/btnPlayPause"
        app:srcCompat="@drawable/svg_btn_shuffle_unselected" />

    <ImageView
        android:id="@+id/handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:paddingTop="7dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="@id/recyclerBackground"
        app:layout_constraintStart_toStartOf="@id/recyclerBackground"
        app:layout_constraintTop_toTopOf="@id/recyclerBackground"
        app:srcCompat="@drawable/svg_collapser" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recyclerBackground"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginTop="675dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="35dp"
        app:cardElevation="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/queueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="12dp"
        android:fontFamily="@font/biko_bold"
        android:text="@string/queue"
        android:textColor="@color/lightGrey"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/recyclerBackground"
        app:layout_constraintRight_toRightOf="@id/recyclerBackground"
        app:layout_constraintTop_toTopOf="@id/recyclerBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playerRecycler"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="55dp"
        android:elevation="12dp"
        android:overScrollMode="never"
        app:layout_constraintLeft_toLeftOf="@id/recyclerBackground"
        app:layout_constraintRight_toRightOf="@id/recyclerBackground"
        app:layout_constraintTop_toTopOf="@id/recyclerBackground"
        tools:listitem="@layout/player_recycler_items" />

</androidx.constraintlayout.motion.widget.MotionLayout>